--- a/css/main.css
+++ b/css/main.css
@@ -49,3 +49,30 @@ a:hover{
     font-size: 1rem;
     line-height: 1.5;
 }
+
+#intor .name{
+    font-family: var(--mono);
+}
+
+.name span{
+    font-family: var(--sans);
+    font-size: 4rem;
+    color: var(--aqua);
+    display: block;
+}
+
+#intro h2{
+    font-size: 4rem;
+    font-weight: 900;
+}
+
+#contact{
+    text-align: center;
+    width: 400px;
+    margin: 0 auto;
+    padding: 3rem 0;
+}
+
+#contact p:last-child{
+    margin-top: 3rem;
+}
