--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,29 @@ body {
     color: var(--white);
     font-size: var(--font-size);
 }
+
+nav{
+    font-family: var(--mono);
+    font-size: 80%;
+    padding: 1rem;
+}
+
+nav h1 a{
+    font-family: var(--sans);
+}
+
+nav ul{
+    list-style-type: none;
+    padding: 0; 
+    margin: 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+
 h1,
 h2,
 h3 {
