--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,10 @@ nav{
 nav h1 a{
     font-family: var(--sans);
 }
-
+nav li:first-child{
+    flex-basis: 100%;
+    text-align: center;
+}
 nav ul{
     list-style-type: none;
     padding: 0; 
@@ -49,6 +52,18 @@ nav ul{
     gap: 2rem;
 }
 
+nav [class*="fa-"]{
+    font-size: 150%;
+    color: var(--aqua)
+}
+nav a {
+    color: var(--white);
+    text-decoration: none;
+    display: block;
+}
+nav a:hover{
+    color: var(--magenta);
+}
 
 h1,
 h2,
