--- a/css/main.css
+++ b/css/main.css
@@ -59,12 +59,15 @@ nav [class*="fa-"]{
 nav a {
     color: var(--white);
     text-decoration: none;
-    display: block;
+    /* display: block; */
 }
 nav a:hover{
     color: var(--magenta);
 }
 
+nav [class*="fa-"]:hover{
+    color: var(--magenta)
+}
 h1,
 h2,
 h3 {
@@ -106,11 +109,43 @@ a:hover{
 
 #contact{
     text-align: center;
-    width: 400px;
+    width: 100%;
     margin: 0 auto;
+    background-color: var(--hotmag);
     padding: 3rem 0;
 }
 
 #contact p:last-child{
     margin-top: 3rem;
+}
+
+.button{
+    background-color: var(--magenta);
+    padding: 0.5rem;
+    border-radius: 5px;
+}
+
+.button:hover{
+    color:var(--white);
+    background-color: var(--hotmag);
+}
+
+@media(min-width: 850px){
+    body{
+        background-color: grey;
+
+    }
+
+    nav{
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
+    nav li:first-child{
+        flex-basis: auto;
+        text-align: left;
+        margin-right: auto;
+    }
+
+
 }
