--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,55 @@ a:hover{
     font-size: 4rem;
     font-weight: 900;
 }
+.projects{
+   background-color: var(--dkblue); 
+   padding: 4rem 1rem;
+}
+
+.projects h2{
+    font-size: 2.5rem;
+    margin-bottom: calc(2.5rem * 1.5);
+}
+.projects h3{
+    color: var(--aqua);
+}
+
+.projects h4{
+    font-size: 1rem;
+    font-family: var(--mono);
+}
+
+
+.black-box{
+    background-color: var(--black);
+    padding: 1rem;
+    border-radius: 10px;
+    color: var(--white);
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+.projects ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    gap: 1rem;
+    font-size: 1rem;
+}
+.projects img{
+    margin: 2rem 0 4rem 0;
+    border-left: 1px solid var(--aqua);
+    border-top: 1px solid var(--aqua);
+    border-radius: 25px;
+    padding: 1rem;
+}
+
+img{
+    width: 100%;
+}
 
 #contact{
     text-align: center;
@@ -119,17 +168,20 @@ a:hover{
 .contact-text{
     width: 65%;
     margin: 0 auto;
-  
+    padding-top: 20px;
 }
 
 #contact p:last-child{
     margin-top: 2rem;
     font-size: 40px;
 }
+.contant-h2{
+   margin-top: 20px;
+}
 
 .section-plum{
     background-color: var(--plum);
-    padding-bottom: 20px;
+    /* padding-bottom: 20px; */
 }
 
 .button{
@@ -159,11 +211,46 @@ footer ul{
     font: 3rem;
 }
 
-@media(min-width: 850px){
+.gradient{
+    background: linear-gradient(6deg, rgba(255,23,228,1) 0%, rgba(134,251,251,1) 79%);
+    height: 2px;
+}
+
+@media(min-width: 550px){
     body{
         background-color: grey;
-
     }
+    
+    article{
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        gap: 1rem;
+    }
+    .projects img{
+        grid-column: 1/6;
+        grid-row: 1/2;
+    }
+
+    .projects-text{
+       grid-column: 5/11;
+       grid-row: 1/2;
+       order: 2;
+       text-align: right;
+    }
+
+    .projects ul{
+        justify-content: flex-end;
+    }
+
+
+}
+
+
+
+
+
+@media(min-width: 850px){
+   
 
     nav{
         max-width: 1200px;
