--- a/css/main.css
+++ b/css/main.css
@@ -108,20 +108,20 @@ a:hover{
     font-size: 4rem;
     font-weight: 900;
 }
-.projects{
+#projects{
    background-color: var(--dkblue); 
    padding: 4rem 1rem;
 }
 
-.projects h2{
+#projects h2{
     font-size: 2.5rem;
     margin-bottom: calc(2.5rem * 1.5);
 }
-.projects h3{
+#projects h3{
     color: var(--aqua);
 }
 
-.projects h4{
+#projects h4{
     font-size: 1rem;
     font-family: var(--mono);
 }
@@ -136,7 +136,7 @@ a:hover{
     line-height: 1.5;
 }
 
-.projects ul{
+#projects ul{
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -146,7 +146,7 @@ a:hover{
     gap: 1rem;
     font-size: 1rem;
 }
-.projects img{
+#projects img{
     margin: 2rem 0 4rem 0;
     border-left: 1px solid var(--aqua);
     border-top: 1px solid var(--aqua);
@@ -217,30 +217,42 @@ footer ul{
 }
 
 @media(min-width: 550px){
-    body{
-        background-color: grey;
-    }
-    
     article{
         display: grid;
         grid-template-columns: repeat(10, 1fr);
         gap: 1rem;
     }
-    .projects img{
+    #projects img{
         grid-column: 1/6;
         grid-row: 1/2;
     }
 
-    .projects-text{
+    .text{
        grid-column: 5/11;
        grid-row: 1/2;
        order: 2;
        text-align: right;
     }
 
-    .projects ul{
+    #projects ul{
         justify-content: flex-end;
     }
+
+    #projects .reverse .text{
+        grid-column: 1/7;
+        order: 2;
+        text-align: left;
+    }
+
+    #projects .reverse img{
+        grid-column: 6/11;
+        grid-row: 1/2;
+    }
+
+    #projects .reverse ul{
+        justify-content: flex-start;
+    }
+
 
 
 }
