wip: css update

--- a/css/main.css
+++ b/css/main.css
@@ -216,6 +216,10 @@ footer ul{
     height: 2px;
 }
 
+.about-me-h2{
+    color: pink;
+    font-size: 50px;
+}
 @media(min-width: 550px){
     article{
         display: grid;
@@ -261,22 +265,14 @@ footer ul{
         background-color: var(--dkblue);
        
     }
-    .about-me{
-        height: 900px;
-    }
-
-    /* .about-footer{
-        overflow: hidden;
-        height: 300px;
-    } */
+   
 }
 
 @media(min-width: 850px){
-   
-
     nav{
         max-width: 1200px;
         margin: 0 auto;
+        margin-bottom: 50px;
     }
 
     nav li:first-child{
@@ -284,5 +280,15 @@ footer ul{
         text-align: left;
         margin-right: auto;
     }
+
+    .about-nav ul {
+        margin-top: 45px;
+    }
+
+    .about-me{
+        padding: 70px 0 75px;
+    }
+
+    
 
 }
